--- a/tokio_stream_example/Cargo.toml
+++ b/tokio_stream_example/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = {version = "1.6.1", features = ["full"]}
-tokio-stream = "0.1.6"
+tokio = { version = "1.10.0", features = ["rt", "sync", "macros", "rt-multi-thread"] }
+tokio-stream = {version = "0.1.7", features = ["sync"]}
