--- a/serde-server/Cargo.toml
+++ b/serde-server/Cargo.toml
@@ -1,12 +1,10 @@
 [package]
 name = "serde-server"
 version = "0.1.0"
-authors = ["19年梦醒 <3949379+getong@users.noreply.github.com>"]
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = "1.0.124"
-serde_derive = "1.0.124"
+serde = { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.64"
