--- a/serde_example/Cargo.toml
+++ b/serde_example/Cargo.toml
@@ -6,6 +6,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = "1.0.123"
-serde_derive = "1.0.123"
+serde = { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.62"
