--- a/serde-custom/Cargo.toml
+++ b/serde-custom/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = "1.0.124"
-serde_derive = "1.0.124"
-serde_json = "1.0.64"
-serde_test = "1.0.124"
+serde = { version = "1.0.130", features = ["derive"] }
+serde_json = "1.0.68"
+serde_test = "1.0.130"
