--- a/deadpool_redis_once_cell_example/Cargo.toml
+++ b/deadpool_redis_once_cell_example/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+arc-swap = "1.4.0"
 deadpool-redis = { version = "0.10.0", features = ["serde","rt_tokio_1"] }
 once_cell = "1.8.0"
+parking_lot = { version = "0.11.2", features = ["nightly"] }
 tokio = { version = "1.12.0", features = ["full"] }
