--- a/tokio-graceful-shutdown_example/Cargo.toml
+++ b/tokio-graceful-shutdown_example/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.47"
+env_logger = "0.9.0"
 log = "0.4.14"
 tokio = { version = "1.14.0", features = ["full"] }
 tokio-graceful-shutdown = "0.3.0"
