--- a/google-authenticator_example/Cargo.toml
+++ b/google-authenticator_example/Cargo.toml
@@ -6,9 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-## google-authenticator = "0.3.0"
-
-
-[dependencies.google-authenticator]
-version = "0.3.0"
-features = ["with-qrcode"]
+google-authenticator = { version = "0.3.0", features = ["with-qrcode"] }
