--- a/actix_web_example/Cargo.toml
+++ b/actix_web_example/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "3.3.2"
+actix-web = "4.0.1"
+tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
