--- a/pin_and_suffering_example_workspace/Cargo.toml
+++ b/pin_and_suffering_example_workspace/Cargo.toml
@@ -2,12 +2,14 @@
 
 
 members = [
-"future_poll_unpin_example",
-"future_slow_read1_example",
-"future_slow_read2_example",
-"future_slow_read3_example",
-"future_slow_read4_example",
-"future_slow_read5_example",
-"future_slow_read6_example",
-"pin_as_mut_example",
+        "future_poll_unpin_example",
+        "future_slow_read1_example",
+        "future_slow_read2_example",
+        "future_slow_read3_example",
+        "future_slow_read4_example",
+        "future_slow_read5_example",
+        "future_slow_read6_example",
+        "pin_as_mut_example",
+        "bad_swap_example",
+        "pin_utils_example",
 ]
