add safe pin example

--- a/pin_and_suffering_example_workspace/Cargo.toml
+++ b/pin_and_suffering_example_workspace/Cargo.toml
@@ -12,4 +12,5 @@ members = [
         "pin_as_mut_example",
         "bad_swap_example",
         "pin_utils_example",
+        "safe_pin_example",
 ]
