add pin_util::pin_mut example

--- a/pin_and_suffering_example_workspace/Cargo.toml
+++ b/pin_and_suffering_example_workspace/Cargo.toml
@@ -13,4 +13,5 @@ members = [
         "bad_swap_example",
         "pin_utils_example",
         "safe_pin_example",
+        "pin_utils_pin_mut_example"
 ]
