add misleading wake_by_ref example

--- a/pin_and_suffering_example_workspace/Cargo.toml
+++ b/pin_and_suffering_example_workspace/Cargo.toml
@@ -15,4 +15,5 @@ members = [
         "safe_pin_example",
         "pin_utils_pin_mut_example",
         "pin_project_example",
+        "misleading_wake_by_ref_example",
 ]
