--- a/pin_and_suffering_example_workspace/Cargo.toml
+++ b/pin_and_suffering_example_workspace/Cargo.toml
@@ -17,4 +17,5 @@ members = [
         "pin_project_example",
         "misleading_wake_by_ref_example",
         "spawn_waker_clone_example",
+        "pin_and_option_take_inner_example",
 ]
