--- a/pin_project_example/Cargo.toml
+++ b/pin_project_example/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 pin-project = "1.0.10"
 request = "0.0.8"
-tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
+reqwest = { version = "0.11.10", features = ["json"] }
+tokio = { version = "1.17.0", features = ["full"] }
