--- a/pin_api_example_workspace/Cargo.toml
+++ b/pin_api_example_workspace/Cargo.toml
@@ -5,4 +5,5 @@ members = [
         "pin_as_ref_example",
         "pin_into_inner_example",
         "new_unchecked_example",
+        "into_inner_unchecked_example",
 ]
