add get_mut example

--- a/pin_api_example_workspace/Cargo.toml
+++ b/pin_api_example_workspace/Cargo.toml
@@ -8,4 +8,5 @@ members = [
         "into_inner_unchecked_example",
         "map_unchecked_example",
         "map_unchecked_mut_example",
+        "get_mut_example",
 ]
