add set example

--- a/pin_api_example_workspace/Cargo.toml
+++ b/pin_api_example_workspace/Cargo.toml
@@ -9,4 +9,5 @@ members = [
         "map_unchecked_example",
         "map_unchecked_mut_example",
         "get_mut_example",
+        "set_example",
 ]
