--- a/pin_api_example_workspace/Cargo.toml
+++ b/pin_api_example_workspace/Cargo.toml
@@ -10,4 +10,5 @@ members = [
         "map_unchecked_mut_example",
         "get_mut_example",
         "set_example",
+        "into_ref_example",
 ]
