add get_unchecked_mut example

--- a/pin_api_example_workspace/Cargo.toml
+++ b/pin_api_example_workspace/Cargo.toml
@@ -12,4 +12,5 @@ members = [
         "set_example",
         "into_ref_example",
         "as_mut_example",
+        "get_unchecked_mut_example",
 ]
