mut self.field example

--- a/struct_ownership_example_workspace/Cargo.toml
+++ b/struct_ownership_example_workspace/Cargo.toml
@@ -2,5 +2,6 @@
 
 
 members = [
-        "struct_partial_move_example"
+        "struct_partial_move_example",
+        "mut_self_field_example",
 ]
