--- a/axum_example/Cargo.toml
+++ b/axum_example/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.3.0"
-serde = "1.0.130"
-serde_derive = "1.0.130"
-tokio = { version = "1.13.0", features = ["full"] }
-tracing = "0.1.29"
-tracing-subscriber = "0.3.1"
+axum = "0.5.6"
+serde = { version = "1.0.137", features = ["derive"] }
+serde_derive = "1.0.137"
+tokio = { version = "1.18.2", features = ["full"] }
+tracing = "0.1.34"
+tracing-subscriber = "0.3.11"
