--- a/tarpc_service_example/Cargo.toml
+++ b/tarpc_service_example/Cargo.toml
@@ -6,18 +6,18 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.44"
-clap = "3.0.0-beta.5"
-futures = "0.3.17"
-log = "0.4.14"
-opentelemetry = { version = "0.16.0", features = ["rt-tokio"] }
-opentelemetry-jaeger = { version = "0.15.0", features = ["rt-tokio"] }
-rand = "0.8.4"
-tarpc = { version = "0.27.2", features = ["full"] }
-tokio = { version = "1.13.0", features = ["full"] }
-tracing = "0.1.29"
-tracing-opentelemetry = "0.16.0"
-tracing-subscriber = { version = "0.3.1", features = ["env-filter","std"] }
+anyhow = "1.0.57"
+clap = {version = "3.1.18", features = ["derive"] }
+futures = "0.3.21"
+log = "0.4.17"
+opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
+opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
+rand = "0.8.5"
+tarpc = { version = "0.29.0", features = ["full"] }
+tokio = { version = "1.18.2", features = ["full"] }
+tracing = "0.1.34"
+tracing-opentelemetry = "0.17.2"
+tracing-subscriber = { version = "0.3.11", features = ["env-filter","std"] }
 
 
 [lib]
