--- a/fred_redis_workspace_example/fred_pool_example/Cargo.toml
+++ b/fred_redis_workspace_example/fred_pool_example/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = "0.4.19"
 fred = "5.0.0"
+futures = "0.3.21"
 tokio = { version = "1.18.2", features = ["rt-multi-thread", "macros"] }
