--- a/macro_workspace_example/Cargo.toml
+++ b/macro_workspace_example/Cargo.toml
@@ -5,4 +5,5 @@ members = [
         "variadic_function_example1",
         "variadic_function_example2",
         "variadic_function_example3",
+        "variadic_function_example4",
 ]
