--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -6,4 +6,5 @@ members = [
         "tokio_abort_example",
         "tokio_is_finished_example",
         "tokio_io_split_example",
+        "tokio_resume_pause_example",
 ]
