--- a/box_workspace_example/Cargo.toml
+++ b/box_workspace_example/Cargo.toml
@@ -5,4 +5,5 @@ members = [
         "box_as_mut_example",
         "box_borrow_mut_example",
         "box_trait_object_example",
+        "box_str_example",
 ]
