--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -5,4 +5,5 @@ members = [
         "libp2p_chat_example",
         "libp2p_example",
         "libp2p_peer_example",
+        "libp2p_blockchain_example",
 ]
