add substrate example

--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -6,4 +6,5 @@ members = [
         "libp2p_example",
         "libp2p_peer_example",
         "libp2p_blockchain_example",
+        "substrate_example",
 ]
