--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -7,4 +7,5 @@ members = [
         "libp2p_peer_example",
         "libp2p_blockchain_example",
         "libp2p_gossipsub_chat_example",
+        "libp2p_gossipsub_chat2_example",
 ]
