--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -8,4 +8,5 @@ members = [
         "tokio_io_split_example",
         "tokio_resume_pause_example",
         "tokio_tcp_mpsc_example",
+        "tokio_semaphore_example",
 ]
