add tokio semaphore example 2

--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -9,4 +9,5 @@ members = [
         "tokio_resume_pause_example",
         "tokio_tcp_mpsc_example",
         "tokio_semaphore_example",
+        "tokio_semaphore_example2",
 ]
