--- a/tokio_workspace_example/tokio_fork_child_process_example/Cargo.toml
+++ b/tokio_workspace_example/tokio_fork_child_process_example/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2021"
 [dependencies]
 nix = "0.24.1"
 tokio = { version = "1.18.2", features = ["rt-multi-thread", "macros", "net", "io-util"] }
-wait = "0.1.9"
+#wait = "0.1.9"
