--- a/macro_workspace_example/Cargo.toml
+++ b/macro_workspace_example/Cargo.toml
@@ -7,4 +7,5 @@ members = [
         "variadic_function_example3",
         "variadic_function_example4",
         "append_tuple_example",
+        "my_vec_example",
 ]
