add libp2p chat2 example

--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -3,6 +3,7 @@
 
 members = [
         "libp2p_chat_example",
+        "libp2p_chat2_example",
         "libp2p_example",
         "libp2p_peer_example",
         "libp2p_blockchain_example",
