--- a/termion_example/Cargo.toml
+++ b/termion_example/Cargo.toml
@@ -6,4 +6,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+futures = "0.3.21"
 termion = "1.5.6"
+termion-input-tokio = "0.3.0"
+tokio = { version = "1.20.0", features = ["macros", "io-util", "time", "rt-multi-thread", "io-std"] }
+tokio-stream = "0.1.9"
