--- a/futures_workspace_example/Cargo.toml
+++ b/futures_workspace_example/Cargo.toml
@@ -4,5 +4,6 @@
 members = [
         "tokio_color_eyre_example",
         "tokio_reqwest_example",
-        "futures_stream_example"
+        "futures_stream_example",
+        "futures_explain_example",
 ]
