--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -14,4 +14,5 @@ members = [
         "tokio_actor_joinhandle_example",
         "tokio_park_example",
         "tokio_echo_server_example",
+        "tokio_spawn_loop_select_example",
 ]
