add tokio channel example

--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -17,4 +17,5 @@ members = [
         "tokio_spawn_loop_select_example",
         "tokio_interval_example",
         "tokio_task_channel_example",
+        "tokio_channel_example",
 ]
