--- a/fdg_macroquad_workspace_example/fdg_macroquad_4d_cube_example/Cargo.toml
+++ b/fdg_macroquad_workspace_example/fdg_macroquad_4d_cube_example/Cargo.toml
@@ -6,7 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+egui-macroquad = "0.9"
+fdg-sim = { version = "0.2", features = ["json"] }
+macroquad = "0.3"
+serde = { version = "1.0.140", features = ["derive"] }
+jsonxf = "1.1.1"
+serde_json = "1.0"
 fdg-macroquad = "0.2.1"
-fdg-sim = "0.2.0"
-macroquad = "0.3.23"
 pretty_env_logger = "0.4.0"
