add libp2p Kademlia example

--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -9,4 +9,5 @@ members = [
         "libp2p_blockchain_example",
         "libp2p_floodsub_chat_example",
         "libp2p_gossipsub_chat_example",
+        "libp2p_kademlia_example",
 ]
