--- a/openraft_workspace_example/raft_kv_memstore/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_memstore/Cargo.toml
@@ -6,17 +6,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4.0.0-rc.2"
-async-trait = "0.1.36"
-clap = { version = "3.0.13", features = ["derive", "env"] }
+actix-web = "4.1.0"
+async-trait = "0.1.57"
+clap = { version = "3.2.16", features = ["derive", "env"] }
 env_logger = "0.9.0"
 # openraft = "0.6.7"
 #openraft = { version = "0.6", path = "../../openraft", features = ["serde"] }
 openraft = { git = "https://github.com/datafuselabs/openraft", features = ["serde"] }
 # openraft = { version = "0.6", , features = ["serde"] }
-reqwest = { version = "0.11.9", features = ["json"] }
-serde = { version = "1.0.114", features = ["derive"] }
-serde_json = "1.0.57"
-tokio = { version = "1.0", default-features = false, features = ["sync"] }
-tracing = "0.1.29"
-tracing-futures = "0.2.4"
+reqwest = { version = "0.11.11", features = ["json"] }
+serde = { version = "1.0.143", features = ["derive"] }
+serde_json = "1.0.83"
+tokio = { version = "1.20.1", default-features = false, features = ["sync"] }
+tracing = "0.1.36"
+tracing-futures = "0.2.5"
