--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -22,4 +22,5 @@ members = [
         "tokio_udp_server_example",
         "tokio_udpflow_example",
         "tokio_async_io_example",
+        "tokio_udp_example",
 ]
