--- a/tokio_stream_workspace_example/Cargo.toml
+++ b/tokio_stream_workspace_example/Cargo.toml
@@ -4,4 +4,5 @@
 members = [
         "tokio_stream_throttle_example",
         "tokio_stream_pin_example",
+        "tokio_stream_timeout_example",
 ]
