add proc macro example

--- a/macro_workspace_example/Cargo.toml
+++ b/macro_workspace_example/Cargo.toml
@@ -8,4 +8,5 @@ members = [
         "variadic_function_example4",
         "append_tuple_example",
         "my_vec_example",
+        "proc_macro_example",
 ]
