--- a/seaorm_example/Cargo.toml
+++ b/seaorm_example/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sea-orm = { version = "0.9.0", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ], default-features = false }
+log = "0.4.17"
+sea-orm = { version = "0.9.2", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ], default-features = false }
+tokio = { version = "1.21.1", features = ["full"] }
