add rust_quiz 1 example

--- a/macro_workspace_example/Cargo.toml
+++ b/macro_workspace_example/Cargo.toml
@@ -12,4 +12,5 @@ members = [
         "string_obfuscation_example",
         "repeat_variable_example",
         "no_parameter_macro_example",
+        "rust_quiz_1_example",
 ]
