add thread scope example

--- a/thread_workspace_example/Cargo.toml
+++ b/thread_workspace_example/Cargo.toml
@@ -5,4 +5,5 @@ members = [
         "thread_join_example",
         "thread_pool_example",
         "thread_return_value_example",
+        "thread_scope_example",
 ]
