add wrong macro example

--- a/macro_workspace_example/Cargo.toml
+++ b/macro_workspace_example/Cargo.toml
@@ -13,4 +13,5 @@ members = [
         "repeat_variable_example",
         "no_parameter_macro_example",
         "rust_quiz_1_example",
+        "wrong_macro_example",
 ]
