add expand macro example

--- a/macro_workspace_example/Cargo.toml
+++ b/macro_workspace_example/Cargo.toml
@@ -14,4 +14,5 @@ members = [
         "no_parameter_macro_example",
         "rust_quiz_1_example",
         "wrong_macro_example",
+        "expand_macro_example",
 ]
