--- a/macro_workspace_example/Cargo.toml
+++ b/macro_workspace_example/Cargo.toml
@@ -15,4 +15,5 @@ members = [
         "rust_quiz_1_example",
         "wrong_macro_example",
         "expand_macro_example",
+        "fragment_specifiers_example",
 ]
