future_time example

--- a/async_cancellation_workspace_example/Cargo.toml
+++ b/async_cancellation_workspace_example/Cargo.toml
@@ -5,4 +5,5 @@ members = [
         "drop_future_example",
         "drop_task_example",
         "abort_task_example",
+        "futures_time_example",
 ]
