--- a/lifetime_workspace_example/Cargo.toml
+++ b/lifetime_workspace_example/Cargo.toml
@@ -6,4 +6,5 @@ members = [
         "lifetime_example2",
         "lifetime_example3",
         "lifetime_subtyping",
+        "lifetime_mismatch_example",
 ]
