--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -29,4 +29,5 @@ members = [
         "tokio_task_local_example",
         "tokio_async_backtrace_example",
         "tokio_select_biased_example",
+        "tokio_select_task_example",
 ]
