--- a/regex_workspace_example/Cargo.toml
+++ b/regex_workspace_example/Cargo.toml
@@ -7,4 +7,5 @@ members = [
         "regex_phone_numbers_example",
         "regex_multiple_example",
         "regex_occurrences_example",
+        "regex_chinese_letters_example",
 ]
