add reborrow example 4 and 5

--- a/reborrow_workspace_example/Cargo.toml
+++ b/reborrow_workspace_example/Cargo.toml
@@ -5,5 +5,6 @@ members = [
         "reborrow_eample1",
         "reborrow_eample2",
         "reborrow_eample3",
-
+        "reborrow_eample4",
+        "reborrow_eample5",
 ]
