--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -35,4 +35,5 @@ members = [
         "tokio_multi_runtime_example",
         "tokio_async_trait_example",
         "tokio_runtime_spawn_example",
+        "tokio_select_example",
 ]
