--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -8,4 +8,5 @@ members = [
         "axum_server_example",
         "axum_type_safe_routing_example",
         "axum_style_magic_function_params_example",
+        "axum_login_example",
 ]
