--- a/axum_auth_example/Cargo.toml
+++ b/axum_auth_example/Cargo.toml
@@ -10,6 +10,5 @@ async-trait = "0.1.59"
 axum = "0.6.1"
 axum-auth = "0.4.0"
 http = "0.2.8"
-
-request = "0.0.8"
+reqwest = "0.11.13"
 tokio = { version = "1.22.0", features = ["full"] }
