add transmute lifetime example

--- a/memory_transmute_workspace_example/Cargo.toml
+++ b/memory_transmute_workspace_example/Cargo.toml
@@ -5,4 +5,5 @@ members = [
         "mem_transmute_example",
         "size_of_transmute_example",
         "zero_data_type_transmute_example",
+        "transmute_lifetime_example",
 ]
