--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -37,4 +37,5 @@ members = [
         "tokio_runtime_spawn_example",
         "tokio_select_example",
         "tokio_stdin_example",
+        "tokio_bufreader_example",
 ]
