add axum post example

--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -11,4 +11,5 @@ members = [
         "axum_login_example",
         "axum_simple_router_example",
         "axum_stream_protobuf_example",
+        "axum_post_example",
 ]
