add axum prost server example

--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -12,4 +12,5 @@ members = [
         "axum_simple_router_example",
         "axum_stream_protobuf_example",
         "axum_post_example",
+        "axum_prost_server_example",
 ]
