add tokio select return value example

--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -44,4 +44,5 @@ members = [
         "tokio_select_tcp_example",
         "tokio_select_tcplistener_example",
         "tokio_struct_poll_example",
+        "tokio_return_value_example",
 ]
