--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -45,4 +45,5 @@ members = [
         "tokio_select_tcplistener_example",
         "tokio_struct_poll_example",
         "tokio_return_value_example",
+        "tokio_select_pin_function_example",
 ]
