--- a/regex_workspace_example/Cargo.toml
+++ b/regex_workspace_example/Cargo.toml
@@ -8,4 +8,5 @@ members = [
         "regex_multiple_example",
         "regex_occurrences_example",
         "regex_chinese_letters_example",
+        "regex_10_examples"
 ]
