--- a/tokio_tick3_example/Cargo.toml
+++ b/tokio_tick3_example/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.26"
+rand = "0.8.5"
 tokio = { version = "1.10.0", features = ["full"] }
