--- a/tokio_workspace_example/tokio-uring-example/Cargo.toml
+++ b/tokio_workspace_example/tokio-uring-example/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
-tokio-uring = "0.3.0"
+#[dependencies]
+[target.'cfg(target_os = "linux")'.dependencies]
+tokio-uring = "0.4.0"
