--- a/tokio_workspace_example/tokio_tun_read_example/Cargo.toml
+++ b/tokio_workspace_example/tokio_tun_read_example/Cargo.toml
@@ -8,4 +8,6 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.71"
 tokio = { version = "1.28.2", features = ["full"] }
+
+[target.'cfg(target_os = "linux")'.dependencies]
 tokio-tun = "0.7.0"
