--- a/tokio_workspace_example/tokio_tun_read_mq_example/Cargo.toml
+++ b/tokio_workspace_example/tokio_tun_read_mq_example/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.28.2", features = ["full"] }
+[target.'cfg(target_os = "linux")'.dependencies]
 tokio-tun = "0.7.0"
