--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -113,4 +113,5 @@ members = [
         "tokio_runtime_spawn_example2",
         "tokio_select_example2",
         "tokio_time_interval_example2",
+        "task_joinset_tokio_stream_example",
 ]
