--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -115,4 +115,5 @@ members = [
         "tokio_time_interval_example2",
         "task_joinset_tokio_stream_example",
         "tokio_future_join_all_example",
+        "tokio_future_try_join_all_example",
 ]
