add tokio producer consumer example

--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -116,4 +116,5 @@ members = [
         "task_joinset_tokio_stream_example",
         "tokio_future_join_all_example",
         "tokio_future_try_join_all_example",
+        "tokio_producer_consumer_example",
 ]
