add tokio buffer channel example

--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -117,4 +117,5 @@ members = [
         "tokio_future_join_all_example",
         "tokio_future_try_join_all_example",
         "tokio_producer_consumer_example",
+        "tokio_buffer_channel_example",
 ]
