--- a/openraft_workspace_example/raft_kv_rocksdb/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_rocksdb/Cargo.toml
@@ -12,8 +12,8 @@ async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
 async-trait = "0.1.57"
 clap = { version = "3.2.16", features = ["derive", "env"] }
 tracing-subscriber = "0.3.15"
-# openraft = { version = "0.6", path = "../../openraft", features = ["serde"] }
-openraft = { git = "https://github.com/datafuselabs/openraft", features = ["serde"] }
+openraft = { version = "0.8.3", features = ["serde"] }
+# openraft = { git = "https://github.com/datafuselabs/openraft", features = ["serde"] }
 reqwest = { version = "0.11.11", features = ["json"] }
 serde = { version = "1.0.143", features = ["derive"] }
 serde_json = "1.0.83"
