--- a/bevy_workspace_example/Cargo.toml
+++ b/bevy_workspace_example/Cargo.toml
@@ -4,6 +4,7 @@
 resolver = "2" # Important! wgpu/Bevy needs this!
 
 members = [
+        "bevy_ecs_example",
         "bevy_setup_example",
         "bevy_arpg_example",
         "bevy_single_player_example",
