add bevy_quinnet breakout server example

--- a/bevy_workspace_example/Cargo.toml
+++ b/bevy_workspace_example/Cargo.toml
@@ -10,4 +10,5 @@ members = [
         "bevy_single_player_example",
         "bevy_quinnet_chat_server_example",
         "bevy_quinnet_chat_client_example",
+        "bevy_quinnet_breakout_server_example",
 ]
