--- a/async_trait_workspace_example/Cargo.toml
+++ b/async_trait_workspace_example/Cargo.toml
@@ -1,7 +1,9 @@
 [workspace]
 
+resolver = "1"
 
 members = [
         "async_trait_no_lifetime_example",
         "async_trait_example",
+        "async_trait_basic_intro_example",
 ]
