add tokio::io::stdin example

--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -39,6 +39,7 @@ members = [
         "tokio_runtime_spawn_example",
         "tokio_select_example",
         "tokio_stdin_example",
+        "tokio_stdin_example2",
         "tokio_bufreader_example",
         "tokio_spawn_per_connection_example",
         "tokio_spawn_per_quinn_connection_example",
