--- a/libp2p_workspace_example/libp2p_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_example/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-futures = "0.3.19"
-libp2p = "0.41.0"
+futures = "0.3.28"
+libp2p = { version = "0.52.0", features = ["full"] }
