--- a/libp2p_workspace_example/libp2p_chat2_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_chat2_example/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.58"
 futures = "0.3.21"
-libp2p = { version = "0.46.1", features = ["tcp-tokio"] }
-tokio = { version = "1.20.0", features = ["full"] }
+libp2p = { version = "0.52.0", features = ["full"] }
+tokio = { version = "1.28.1", features = ["full"] }
