add tokio future poll_fn example

--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -131,4 +131,5 @@ members = [
         "tokio_read_more_than_1024_bytes_example",
         "tokio_file_transfer_server_example",
         "tokio_file_transfer_client_example",
+        "tokio_future_poll_fn_example",
 ]
