add libp2p_identity ed25519 example

--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -11,4 +11,5 @@ members = [
         "libp2p_floodsub_chat_example",
         "libp2p_gossipsub_chat_example",
         "libp2p_kademlia_example",
+        "libp2p_identity_ed25519_example",
 ]
