add libp2p mdns example

--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -12,4 +12,5 @@ members = [
         "libp2p_gossipsub_chat_example",
         "libp2p_kademlia_example",
         "libp2p_identity_ed25519_example",
+        "libp2p_mdns_example",
 ]
