--- a/libp2p_workspace_example/libp2p_peer_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_peer_example/Cargo.toml
@@ -6,10 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-libp2p = { version = "0.45.1", features = ["tcp-tokio", "mdns"] }
-log = "0.4.17"
-once_cell = "1.12.0"
-pretty_env_logger = "0.4.0"
-serde = { version = "1.0.137", features = ["derive"] }
-serde_json = "1.0.81"
-tokio = { version = "1.19.2", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "fs"] }
+libp2p = { version = "0.52.1", features = ["full"] }
+libp2p-mplex = "0.40.0"
+log = "0.4.19"
+once_cell = "1.18.0"
+pretty_env_logger = "0.5.0"
+serde = { version = "1.0.164", features = ["derive"] }
+serde_json = "1.0.99"
+tokio = { version = "1.28.2", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "fs"] }
