--- a/libp2p_workspace_example/libp2p_chat_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_chat_example/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.57"
-bytes = "1.1.0"
-futures = "0.3.21"
-libp2p = { version = "0.45.0", features = ["tcp-tokio"] }
-rocket = { version = "0.5.0-rc.2", features = ["json"] }
-tokio = { version = "1.18.2", features = ["full"] }
-tokio-util = { version = "0.7.2", features = ["codec"] }
+anyhow = "1.0.71"
+bytes = "1.4.0"
+futures = "0.3.28"
+libp2p = { version = "0.52.1", features = ["full"] }
+rocket = { version = "0.5.0-rc.3", features = ["json"] }
+tokio = { version = "1.28.2", features = ["full"] }
+tokio-util = { version = "0.7.8", features = ["codec"] }
