--- a/libp2p_workspace_example/libp2p_blockchain_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_blockchain_example/Cargo.toml
@@ -6,13 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = "0.4.19"
+chrono = "0.4.26"
 hex = "0.4.3"
-libp2p = { version = "0.45.1", features = ["tcp-tokio", "mdns"] }
-log = "0.4.17"
-once_cell = "1.12.0"
-pretty_env_logger = "0.4.0"
-serde = { version = "1.0.137", features = ["derive"] }
-serde_json = "1.0.81"
-sha2 = "0.10.2"
-tokio = { version = "1.19.2", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "time"] }
+libp2p = { version = "0.52.1", features = ["full"] }
+libp2p-mplex = "0.40.0"
+log = "0.4.19"
+once_cell = "1.18.0"
+pretty_env_logger = "0.5.0"
+serde = { version = "1.0.164", features = ["derive"] }
+serde_json = "1.0.99"
+sha2 = "0.10.7"
+tokio = { version = "1.29.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "time"] }
