--- a/libp2p_workspace_example/libp2p_kademlia_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_kademlia_example/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.60"
-futures = "0.3.21"
-libp2p = "0.46.1"
-tokio = { version = "1.20.1", features = ["full"] }
+anyhow = "1.0.71"
+futures = "0.3.28"
+libp2p = {version = "0.52.1", features = ["full"] }
+tokio = { version = "1.29.0", features = ["full"] }
