--- a/libp2p_workspace_example/libp2p_floodsub_chat_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_floodsub_chat_example/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-env_logger = "0.9.0"
-futures = "0.3.21"
-libp2p = { version = "0.45.1", features = ["tcp-tokio"] }
-tokio = { version = "1.19.2", features = ["full"] }
+env_logger = "0.10.0"
+futures = "0.3.28"
+libp2p = { version = "0.52.1", features = ["full"] }
+libp2p-mplex = "0.40.0"
+tokio = { version = "1.29.0", features = ["full"] }
