--- a/libp2p_workspace_example/libp2p_peer_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_peer_example/Cargo.toml
@@ -7,10 +7,13 @@ edition = "2021"
 
 [dependencies]
 libp2p = { version = "0.52.1", features = ["full"] }
-libp2p-mplex = "0.40.0"
+# libp2p-mplex = "0.40.0"
 log = "0.4.19"
 once_cell = "1.18.0"
 pretty_env_logger = "0.5.0"
 serde = { version = "1.0.164", features = ["derive"] }
 serde_json = "1.0.99"
-tokio = { version = "1.29.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "fs"] }
+tokio = { version = "1.29.0", features = ["full"] }
+anyhow = "1.0.71"
+bytes = "1.4.0"
+futures = "0.3.28"
