--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -18,4 +18,5 @@ members = [
         # "libp2p_dcutr_example",
         "libp2p_tokio_distributed_key-value_store_example",
         "libp2p_tokio_file_sharing_example",
+        "libp2p_tokio_identity_example",
 ]
