--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -19,4 +19,6 @@ members = [
         "libp2p_tokio_distributed_key-value_store_example",
         "libp2p_tokio_file_sharing_example",
         "libp2p_tokio_identity_example",
+        "libp2p_tokio_ipfs_kad_example",
+        "libp2p_tokio_ipfs_private_example",
 ]
