--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -24,4 +24,8 @@ members = [
         "libp2p_tokio_metrics_example",
         "libp2p_tokio_ping_example",
         "libp2p_tokio_relay_server_example",
+        "libp2p_tokio_rendezvous_server_example",
+        "libp2p_tokio_rendezvous_discover_example",
+        "libp2p_tokio_rendezvous_identity_example",
+        "libp2p_tokio_rendezvous_register_example",
 ]
