--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -28,4 +28,5 @@ members = [
         "libp2p_tokio_rendezvous_discover_example",
         "libp2p_tokio_rendezvous_identity_example",
         "libp2p_tokio_rendezvous_register_example",
+        "tokio_stream_fuse_example",
 ]
