add axum websocket server example

--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -16,4 +16,5 @@ members = [
         "axum_prost_server_example",
         "reqwest_prost_client_example",
         "axum_auth_example",
+        "axum_websocket_server_example",
 ]
