add poem websocket example

--- a/poem_workspace_example/Cargo.toml
+++ b/poem_workspace_example/Cargo.toml
@@ -1,7 +1,9 @@
 [workspace]
 
+resolver = "2"
 
 members = [
         "poem_example",
         "poem_openapi_example",
+        "poem_websocket_example",
 ]
