--- a/poem_workspace_example/poem_websocket_example/Cargo.toml
+++ b/poem_workspace_example/poem_websocket_example/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
-name = "poem_example"
+name = "poem_websocket_example"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-poem = "1.3.56"
+futures-util = "0.3.28"
+poem = { version = "1.3.56", features = ["websocket"] }
 tokio = { version = "1.29.1", features = ["full"] }
+tracing-subscriber = "0.3.17"
