--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -134,4 +134,5 @@ members = [
         "tokio_file_transfer_client_example",
         "tokio_future_poll_fn_example",
         "tokio_move_reference_example",
+        "tokio_block_some_ip_example",
 ]
