--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -135,4 +135,5 @@ members = [
         "tokio_future_poll_fn_example",
         "tokio_move_reference_example",
         "tokio_block_some_ip_example",
+        "tokio_tasks_shutdown_example",
 ]
