--- a/tokio_workspace_example/tokio_actor_joinhandle_example/Cargo.toml
+++ b/tokio_workspace_example/tokio_actor_joinhandle_example/Cargo.toml
@@ -15,19 +15,19 @@ serde = { version =  "1.0", features = ["derive"] }
 serde_json = "1.0.100"
 bincode = "1.3.3"
 rand = "^0.8"
-clap = "2.34.0"
-pretty_env_logger = "0.4.0"
+clap = { version = "4.3.11", features = ["derive", "env"] }
+pretty_env_logger = "0.5.0"
 futures-util = "0.3.28"
 tokio = { version = "1.29.1", features = ["full"] }
 tokio-stream = "0.1.14"
-async-trait = "0.1.70"
-env_logger = "0.9.3"
+async-trait = "0.1.71"
+env_logger = "0.10.0"
 log = "0.4.19"
 tokio-tungstenite = { version = "0.17.2", features=["native-tls"]}
 warp = { version = "0.3.5", features=["tls"] }
 url = "2.4.0"
 multicast-socket = "0.2.2"
-sysinfo = "0.23.13"
+sysinfo = "0.29.4"
 bytes = "1.4.0"
 tokio-native-tls = "0.3.1"
 size_format = "1.0.2"
@@ -38,10 +38,12 @@ java-utils = "0.1.0"
 ring = "0.16.20"
 jsonwebtoken = "8.3.0"
 jsonwebkey = { version = "0.3.5", features=["jwt-convert"] }
-base64 = "0.13.1"
+# base64 = "0.21.2"
+base64-compat = "1.0.0"
+once_cell = "1.18.0"
 
 [dev-dependencies]
-criterion = { version = "0.3", features=["async_futures", "html_reports"] }
+criterion = { version = "0.5.1", features=["async_futures", "html_reports"] }
 
 [[bench]]
 name = "my_benchmark"
