--- a/chitchat_example/Cargo.toml
+++ b/chitchat_example/Cargo.toml
@@ -6,19 +6,20 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.65"
-chitchat = "0.4.1"
+anyhow = "1.0.72"
+# chitchat = "0.5.0"
+chitchat = { git = "https://github.com/quickwit-oss/chitchat"}
 cool-id-generator = "1.0.1"
-env_logger = "0.9.1"
-once_cell = "1.15.0"
-poem = "1.3.44"
-poem-openapi = { version = "2.0.14", features = ["swagger-ui"] }
-serde = { version = "1.0.145", features = ["derive"] }
-serde_json = "1.0.85"
+env_logger = "0.10.0"
+once_cell = "1.18.0"
+poem = "1.3.56"
+poem-openapi = { version = "2.0.27", features = ["swagger-ui"] }
+serde = { version = "1.0.174", features = ["derive"] }
+serde_json = "1.0.103"
 structopt = "0.3.26"
-tokio = { version = "1.21.2", features = ["full"] }
-tracing = "0.1.36"
-tracing-subscriber = "0.3.15"
+tokio = { version = "1.29.1", features = ["full"] }
+tracing = "0.1.37"
+tracing-subscriber = "0.3.17"
 
 
 [dev-dependencies]
