--- a/prost_workspace_example/prost_route_msg_example/Cargo.toml
+++ b/prost_workspace_example/prost_route_msg_example/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bytes = "1.4.0"
 prost = "0.11.9"
+tokio = { version = "1.29.1", features = ["full"] }
+prost-types = "0.11.9"
 
 [build-dependencies]
 prost-build = "0.11.9"
